# wordle_solver

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
benches/: solver_bench.rs
docs/: algorithm.md  benchmarks.md  configuration.md  contributing.md  development.md  features.md  usage.md  wordlists.md
src/: lib.rs  main.rs
src/app/: events.rs  mod.rs  state.rs  ui.rs
src/application/: commands.rs  mod.rs  service.rs  state.rs
src/core/: container.rs  error.rs  mod.rs  traits.rs  types.rs
src/domain/: constraint_filter.rs  feedback_service.rs  game_engine.rs  mod.rs  solver_engine.rs
src/game/: mod.rs  word_list.rs  word_list_new.rs  wordle.rs
src/infrastructure/: entropy.rs  mod.rs  strategy.rs  word_list.rs
src/presentation/: mod.rs
src/presentation/tui/: app.rs  events.rs  feedback.rs  layout.rs  mod.rs  mode.rs  state.rs  state_tests.rs
src/presentation/tui/components/: widgets.rs
src/solver/: entropy.rs  feedback.rs  mod.rs  strategy.rs
src/utils/: helpers.rs
