[package]
name = "wordle_rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "wordle_rust"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[[bench]]
name = "solver_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
